Interactive Brokers C# Socket API
Karl Schulze - www.dinosaurtech.com

Release Notes

9.4.0.9 Bug Fix and Clean up - 2/6/08
* Made all EventArgs Serializable as well as the new enumeration FATypes.
* Fixed bug in OrderType.MarketOnClose - changed Description from "MKTCLS" to "MOC"


9.4.0.8 Code Clean up - 1/31/08
* Ran Vs2008 Code Analysis Wizard / FxCop and implemented cleanup
	* Numerous Spelling Changes
		* All Mkt references went to Market
		* All Req references went to Request etc.
		* All Lmt references went to Limit
		* All Indice references went to index
	* Added a lot of CultureInfo related fixes, making sure to provide invarient parsing
* Fixed VB Client, used old contracts, and changed contract references to equity/future

Please note - These are breaking changes, no functionality has been changes, but it will require
you to modify your code to the new spellings.

9.4.0.7 Bug Fix Release - 1/26/08
* Changed FAMethod to Enumeration
* Changed OrderState.Status to enumeration
* Fixed several data parsing problems related to empty strings

9.4.0.6 API and Bug Fix Release - 12/9/07
* Updated to support 9.40 Interactive Brokers API Release
	* What-If Order Support
	* Commission Data
	* Contract/Contract Details Refactored
* Fixed Historical Request 1 day limitation
* Changed TickSizeEvent Args to use TickType instead of TickerType
* All Enums / Container classes are now marked serializable
* Fixed bug on Stop Limit Orders "STPLMT" -> "STP LMT"

9.3.0.5 Bug Fix Release -
* Fixed Historical Data Requests (had improperly fomatted parameter and timestamps)
* Fixed Disconnect call to properly kill the reader thread
* Added support for additional contracts (forex, Futures, Indices)
* Began Order Classes, incomplete for now, but started a Limit Order class.
* Fixed Current Time call, it now returns a date time instead of a string.

9.3.0.4 Bug Fix Release - 
* Added Market On Open enumeration to Time in Force

9.3.0.3 API and Feature Release - July 20th, 2007