@@ -6,6 +6,7 @@ Release Notes
 9.4.0.9 Bug Fix and Clean up - 2/6/08
 * Made all EventArgs Serializable as well as the new enumeration FATypes.
 * Fixed bug in OrderType.MarketOnClose - changed Description from "MKTCLS" to "MOC"
+* Fixed RequestExecution method to allow you to pass a null or empty filter to get all executions.
 
 
 9.4.0.8 Code Clean up - 1/31/08
